--- a/disasm/Cargo.toml
+++ b/disasm/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 capstone = { path = "../capstone" }
+common = { path = "../common" }
 goblin = "0.2"
 gimli = "0.23"
 rustc-demangle = "0.1"
@@ -15,3 +16,4 @@ cpp_demangle = "0.3"
 pdb = "0.6"
 memmap = "0.7"
 once_cell = "1.4"
+log = "0.4"
