--- a/disasm/Cargo.toml
+++ b/disasm/Cargo.toml
@@ -10,8 +10,7 @@ edition = "2018"
 capstone = { path = "../capstone" }
 common = { path = "../common" }
 goblin = "0.2"
-# gimli = "0.23"
-gimli = { git = "https://github.com/ExPixel/gimli.git" }
+gimli = "0.23"
 rustc-demangle = "0.1"
 cpp_demangle = "0.3"
 pdb = "0.6"
