--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,17 +10,35 @@ description = "Disassembly viewer for Rust projects (and more)"
 
 [[bin]]
 bench = false
-path = "app/src/main.rs"
+path = "src/main.rs"
 name = "cargo-disasm"
 
+[lib]
+path = "src/lib.rs"
+name = "disasm"
+
 [dependencies]
-disasm = { path = "disasm" }
+
+# Binary Crate Dependencies
 clap = { version = "3.0.0-beta.2", features = ["derive"]}
 shellexpand = "2"
 cargo_metadata = "0.12"
 atty = "0.2"
 termcolor = "1"
+
+
+# Library Crate Dependencies
+capstone = { package = "ep-capstone", version = "0.1.0", path = "capstone" }
+goblin = "0.2"
+gimli = "0.23"
+rustc-demangle = "0.1"
+cpp_demangle = "0.3"
+pdb = "0.6"
+memmap = "0.7"
+once_cell = "1.4"
+
+# Binary & Library Crate Dependencies
 log = { version = "0.4", features = ["std"] }
 
 [workspace]
-members = ["capstone", "disasm", "common"]
+members = ["capstone"]
