--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ homepage = "https://github.com/ExPixel/cargo-disasm"
 repository = "https://github.com/ExPixel/cargo-disasm"
 readme = "README.md"
 description = "Disassembly viewer for Rust projects (and more)"
+license = "GPL-3.0"
+license-file = "LICENSE.txt"
 
 [[bin]]
 bench = false
