--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,12 @@ repository = "https://github.com/ExPixel/cargo-disasm"
 readme = "README.md"
 description = "Disassembly viewer for Rust projects (and more)"
 license-file = "LICENSE.txt"
+include = [
+    "src/**/*.rs",
+    "Cargo.toml",
+    "LICENSE.txt",
+    "README.md"
+]
 
 [[bin]]
 bench = false
