Cargo doesn't understand my LICENSE file >:(

--- a/capstone/Cargo.toml
+++ b/capstone/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Adolph C. <adolphc@outlook.com>"]
 edition = "2018"
 readme = "README.md"
-license-file = "LICENSE.txt"
+license = "MIT"
 homepage = "https://github.com/ExPixel/cargo-disasm"
 repository = "https://github.com/ExPixel/cargo-disasm"
 description = "incomplete bindings for capstone"
