--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ homepage = "https://github.com/ExPixel/cargo-disasm"
 repository = "https://github.com/ExPixel/cargo-disasm"
 readme = "README.md"
 description = "Disassembly viewer for Rust projects (and more)"
-license-file = "LICENSE.txt"
+license = "GPL-3.0"
 include = [
     "src/**/*.rs",
     "Cargo.toml",
