--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,16 +21,12 @@ path = "src/main.rs"
 name = "cargo-disasm"
 
 [dependencies]
-
-# Binary Crate Dependencies
 clap = { version = "3.0.0-beta.2", features = ["derive"]}
 shellexpand = "2"
 cargo_metadata = "0.12"
 atty = "0.2"
 termcolor = "1"
 
-
-# Library Crate Dependencies
 goblin = "0.2"
 gimli = "0.23"
 rustc-demangle = "0.1"
@@ -39,8 +35,8 @@ pdb = "0.6"
 memmap = "0.7"
 once_cell = "1.4"
 
-# Binary & Library Crate Dependencies
 log = { version = "0.4", features = ["std"] }
+anyhow = "1.0"
 
 [dependencies.capstone]
 package = "ep-capstone"
