--- a/.github/workflows/test-artifacts.yml
+++ b/.github/workflows/test-artifacts.yml
@@ -14,6 +14,8 @@ jobs:
   build_linux_x86_64:
     name: Build Linux x86_64
     runs-on: ubuntu-latest
+    defaults:
+      working-directory: assets/pow
     steps:
     - uses: actions/checkout@v2
       with:
@@ -21,6 +23,7 @@ jobs:
     - uses: actions-rs/toolchain@v1
       with:
         toolchain: stable
+        profile: minimal
         default: true
         override: true
     - uses: actions-rs/cargo@v1
@@ -30,11 +33,13 @@ jobs:
     - uses: actions/upload-artifact@v2
       with:
         name: pow-linux-x86_64
-        path: assets/pow/
+        path: .
 
   build_linux_i686:
     name: Build Linux i686
     runs-on: ubuntu-latest
+    defaults:
+      working-directory: assets/pow
     steps:
     - uses: actions/checkout@v2
       with:
@@ -43,6 +48,7 @@ jobs:
       with:
         target: i686-unknown-linux-gnu
         toolchain: stable
+        profile: minimal
         default: true
         override: true
     - uses: actions-rs/cargo@v1
@@ -52,4 +58,4 @@ jobs:
     - uses: actions/upload-artifact@v2
       with:
         name: pow-linux-i686
-        path: assets/pow/
+        path: .
