--- a/.github/workflows/test-artifacts.yml
+++ b/.github/workflows/test-artifacts.yml
@@ -67,6 +67,10 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: recursive
+ 
+    - name: XCode Select
+      run: xcode-select -s /Applications/Xcode-beta.app/Contents/Developer
+
     - uses: actions-rs/toolchain@v1
       with:
         toolchain: nightly
@@ -93,7 +97,7 @@ jobs:
       working-directory: assets/pow
 
     - name: Build AArch64
-      run: cargo build --target aarch64-apple-darwin
+      run: SDKROOT=$(xcrun -sdk macosx11.0 --show-sdk-path) MACOSX_DEPLOYMENT_TARGET=$(xcrun -sdk macosx11.0 --show-sdk-platform-version) cargo build --target=aarch64-apple-darwin
       working-directory: assets/pow
     - uses: actions/upload-artifact@v2
       with:
