--- a/.github/workflows/test-artifacts.yml
+++ b/.github/workflows/test-artifacts.yml
@@ -69,7 +69,7 @@ jobs:
         submodules: recursive
  
     - name: XCode Select
-      run: xcode-select -s /Applications/Xcode-beta.app/Contents/Developer
+      run: sudo xcode-select -s /Applications/Xcode_12_beta.app
 
     - uses: actions-rs/toolchain@v1
       with:
