Tests for multiple architectures.

--- a/.github/workflows/test-artifacts.yml
+++ b/.github/workflows/test-artifacts.yml
@@ -3,8 +3,8 @@ name: Create Test Artifacts
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    paths:
+      - 'assets/pow/src/**/*.rs'
 
 env:
   CARGO_TERM_COLOR: always
