Test both ep-capstone and cargo-disasm.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,14 +39,14 @@ jobs:
           components: rustfmt, clippy
     - name: Build
       run: cargo build --verbose
-    - name: Build (features = alloc + all-archs + sys-dyn-mem)
+    - name: Build Capstone (features = alloc + all-archs + sys-dyn-mem)
       run: cargo build --verbose --no-default-features --features alloc,all-archs,sys-dyn-mem
       working-directory: ./capstone
-    - name: Build (features = all-archs + sys-dyn-mem)
+    - name: Build Capstone (features = all-archs + sys-dyn-mem)
       run: cargo build --verbose --no-default-features --features all-archs,sys-dyn-mem
       working-directory: ./capstone
     - name: Run tests
-      run: cargo test --verbose
+      run: cargo test --workspace --verbose
     - name: Clippy Lints
       run: cargo clippy --tests --examples
     - name: Check Formatting
