--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ once_cell = "1.4"
 
 log = { version = "0.4", features = ["std"] }
 anyhow = "1.0"
+rayon = "1.5"
 
 [dependencies.capstone]
 package = "ep-capstone"
